tests/negative/bad_struct_field.sans
// expect-error: undefined
struct Point { x Int, y Int }
main() I {
  p = Point { x: 1, y: 2 }
  p.z
}
